using System;

namespace Animals
{
    interface IStrokeable
    {
        // Always public and abstract!
        void Stroke();
    }
}
